--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -15,7 +15,7 @@
 
         />
     <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/imageview"
+        android:id="@+id/imageView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintHeight_percent="0.45"
@@ -27,52 +27,52 @@
         android:src="@mipmap/ic_launcher_round"
          />
     <TextView
-        android:id="@+id/textview1"
+        android:id="@+id/textView1"
         android:layout_width="match_parent"
         android:layout_height="35dp"
         android:layout_marginTop="5dp"
-        app:layout_constraintTop_toBottomOf="@id/imageview"
+        app:layout_constraintTop_toBottomOf="@id/imageView"
         />
     <TextView
-        android:id="@+id/textview2"
+        android:id="@+id/textView2"
         android:layout_width="match_parent"
         android:layout_height="35dp"
         android:layout_marginTop="5dp"
-        app:layout_constraintTop_toBottomOf="@id/textview1"
+        app:layout_constraintTop_toBottomOf="@id/textView1"
         />
     <TextView
-        android:id="@+id/textview3"
+        android:id="@+id/textView3"
         android:layout_width="match_parent"
         android:layout_height="35dp"
         android:layout_marginTop="5dp"
-        app:layout_constraintTop_toBottomOf="@id/textview2"
+        app:layout_constraintTop_toBottomOf="@id/textView2"
         />
     <TextView
-        android:id="@+id/textview4"
+        android:id="@+id/textView4"
         android:layout_width="match_parent"
         android:layout_height="35dp"
         android:layout_marginTop="5dp"
-        app:layout_constraintTop_toBottomOf="@id/textview3"
+        app:layout_constraintTop_toBottomOf="@id/textView3"
         />
     <TextView
-        android:id="@+id/textview5"
+        android:id="@+id/textView5"
         android:layout_width="match_parent"
         android:layout_height="35dp"
         android:layout_marginTop="5dp"
-        app:layout_constraintTop_toBottomOf="@id/textview4"
+        app:layout_constraintTop_toBottomOf="@id/textView4"
         />
     <TextView
-        android:id="@+id/textview6"
+        android:id="@+id/textView6"
         android:layout_width="match_parent"
         android:layout_height="35dp"
         android:layout_marginTop="5dp"
-        app:layout_constraintTop_toBottomOf="@id/textview5"
+        app:layout_constraintTop_toBottomOf="@id/textView5"
         />
     <TextView
-        android:id="@+id/textview7"
+        android:id="@+id/textView7"
         android:layout_width="match_parent"
         android:layout_height="35dp"
         android:layout_marginTop="5dp"
-        app:layout_constraintTop_toBottomOf="@id/textview6"
+        app:layout_constraintTop_toBottomOf="@id/textView6"
         />
 </androidx.constraintlayout.widget.ConstraintLayout>
