--- a/app/src/main/res/layout/repo_design.xml
+++ b/app/src/main/res/layout/repo_design.xml
@@ -4,10 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="120dp"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:onClick="onClick">
 
     <View
-        android:id="@+id/divider2"
+        android:id="@+id/divider"
         android:layout_width="match_parent"
         android:layout_height="120dp"
         android:background="?android:attr/listDivider"
@@ -19,19 +20,19 @@
 
 
     <ImageView
-        android:id="@+id/itemimage"
+        android:id="@+id/itemImage"
         android:layout_width="97dp"
         android:layout_height="97dp"
         android:layout_marginBottom="5dp"
         android:scaleType="fitXY"
         android:src="@mipmap/ic_launcher_round"
-        app:layout_constraintBottom_toBottomOf="@+id/divider2"
+        app:layout_constraintBottom_toBottomOf="@+id/divider"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/iteminfo" />
+        app:layout_constraintTop_toBottomOf="@id/itemInfo" />
 
 
     <TextView
-        android:id="@+id/iteminfo"
+        android:id="@+id/itemInfo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="REPOSITORY"
@@ -45,7 +46,7 @@
         tools:layout_editor_absoluteY="16dp" />
 
     <TextView
-        android:id="@+id/iteminfocard"
+        android:id="@+id/itemInfoCard"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center_vertical"
@@ -55,8 +56,8 @@
         android:layout_marginTop="23dp"
         android:layout_marginBottom="27dp"
         android:layout_marginEnd="120dp"
-        app:layout_constraintTop_toTopOf="@+id/divider2"
-        app:layout_constraintStart_toEndOf="@+id/iteminfo"
+        app:layout_constraintTop_toTopOf="@+id/divider"
+        app:layout_constraintStart_toEndOf="@+id/itemInfo"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
