--- a/app/src/main/res/layout/repo_design.xml
+++ b/app/src/main/res/layout/repo_design.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="120dp"
     android:orientation="vertical"
-    android:onClick="onClick">
+    android:onClick="onItemClick">
 
     <View
         android:id="@+id/divider"
