--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -15,7 +15,7 @@
 
         />
     <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/imageView"
+        android:id="@+id/itemImageView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintHeight_percent="0.45"
@@ -27,52 +27,129 @@
         android:src="@mipmap/ic_launcher_round"
          />
     <TextView
-        android:id="@+id/textView1"
-        android:layout_width="match_parent"
-        android:layout_height="35dp"
+        android:id="@+id/itemNameTitle"
+        android:layout_width="0dp"
+        app:layout_constraintWidth_percent="0.20"
+        android:layout_height="50dp"
         android:layout_marginTop="5dp"
-        app:layout_constraintTop_toBottomOf="@id/imageView"
+        app:layout_constraintTop_toBottomOf="@id/itemImageView"
+        app:layout_constraintStart_toStartOf="parent"
+        android:text="Name:"
+        android:textSize="28sp"
+        android:textStyle="bold|italic"
+        android:textAppearance="@color/design_default_color_primary"
+        android:gravity="center_vertical"
         />
     <TextView
-        android:id="@+id/textView2"
-        android:layout_width="match_parent"
-        android:layout_height="35dp"
+        android:id="@+id/itemName"
+        android:layout_width="0dp"
+        app:layout_constraintWidth_percent="0.80"
+        android:layout_height="50dp"
         android:layout_marginTop="5dp"
-        app:layout_constraintTop_toBottomOf="@id/textView1"
+        app:layout_constraintTop_toBottomOf="@+id/itemImageView"
+        app:layout_constraintStart_toEndOf="@+id/itemNameTitle"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:textSize="20sp"
+        android:textStyle="italic"
+        android:textColor="@color/teal_200"
+        android:gravity="center_vertical"
         />
     <TextView
-        android:id="@+id/textView3"
-        android:layout_width="match_parent"
-        android:layout_height="35dp"
+        android:id="@+id/itemIDTitle"
+        android:layout_width="0dp"
+        app:layout_constraintWidth_percent="0.20"
+        android:layout_height="50dp"
         android:layout_marginTop="5dp"
-        app:layout_constraintTop_toBottomOf="@id/textView2"
+        app:layout_constraintTop_toBottomOf="@id/itemNameTitle"
+        app:layout_constraintStart_toStartOf="parent"
+        android:text="ID:"
+        android:textSize="35sp"
+        android:textStyle="bold|italic"
+        android:textAppearance="@color/design_default_color_primary"
+        android:gravity="center_vertical"
         />
     <TextView
-        android:id="@+id/textView4"
-        android:layout_width="match_parent"
-        android:layout_height="35dp"
+        android:id="@+id/itemID"
+        android:layout_width="0dp"
+        app:layout_constraintWidth_percent="0.80"
+        android:layout_height="50dp"
         android:layout_marginTop="5dp"
-        app:layout_constraintTop_toBottomOf="@id/textView3"
+        app:layout_constraintTop_toBottomOf="@+id/itemName"
+        app:layout_constraintStart_toEndOf="@+id/itemIDTitle"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:textSize="20sp"
+        android:textStyle="italic"
+        android:textColor="@color/teal_200"
+        android:gravity="center_vertical"
         />
     <TextView
-        android:id="@+id/textView5"
-        android:layout_width="match_parent"
-        android:layout_height="35dp"
+        android:id="@+id/itemScoreTitle"
+        android:layout_width="0dp"
+        app:layout_constraintWidth_percent="0.20"
+        android:layout_height="50dp"
         android:layout_marginTop="5dp"
-        app:layout_constraintTop_toBottomOf="@id/textView4"
+        app:layout_constraintTop_toBottomOf="@id/itemIDTitle"
+        app:layout_constraintStart_toStartOf="parent"
+        android:text="Score:"
+        android:textSize="28sp"
+        android:textStyle="bold|italic"
+        android:textAppearance="@color/design_default_color_primary"
+        android:gravity="center_vertical"
         />
     <TextView
-        android:id="@+id/textView6"
-        android:layout_width="match_parent"
-        android:layout_height="35dp"
+        android:id="@+id/itemScore"
+        android:layout_width="0dp"
+        app:layout_constraintWidth_percent="0.80"
+        android:layout_height="50dp"
         android:layout_marginTop="5dp"
-        app:layout_constraintTop_toBottomOf="@id/textView5"
+        app:layout_constraintTop_toBottomOf="@+id/itemID"
+        app:layout_constraintStart_toEndOf="@+id/itemScoreTitle"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:textSize="20sp"
+        android:textStyle="italic"
+        android:textColor="@color/teal_200"
+        android:gravity="center_vertical"
         />
     <TextView
-        android:id="@+id/textView7"
-        android:layout_width="match_parent"
-        android:layout_height="35dp"
+        android:id="@+id/itemHtmlUrlTitle"
+        android:layout_width="0dp"
+        app:layout_constraintWidth_percent="0.20"
+        android:layout_height="50dp"
         android:layout_marginTop="5dp"
-        app:layout_constraintTop_toBottomOf="@id/textView6"
+        app:layout_constraintTop_toBottomOf="@id/itemScoreTitle"
+        app:layout_constraintStart_toStartOf="parent"
+        android:text="URL:"
+        android:textSize="35sp"
+        android:textStyle="bold|italic"
+        android:textAppearance="@color/design_default_color_primary"
+        android:gravity="center_vertical"
         />
+    <TextView
+        android:id="@+id/itemHtmlUrl"
+        android:layout_width="0dp"
+        app:layout_constraintWidth_percent="0.80"
+        android:layout_height="50dp"
+        android:layout_marginTop="5dp"
+        app:layout_constraintTop_toBottomOf="@+id/itemScore"
+        app:layout_constraintStart_toEndOf="@+id/itemHtmlUrlTitle"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:textSize="20sp"
+        android:textStyle="italic"
+        android:textColor="@color/teal_200"
+        android:gravity="center_vertical"
+        android:autoLink="web"
+        />
+    <TextView
+        android:id="@+id/repoOwner"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginTop="5dp"
+        app:layout_constraintTop_toBottomOf="@id/itemHtmlUrl"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:gravity="center_vertical"
+        android:textSize="25sp"
+        android:textColor="@color/black"
+        />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
