--- a/app/src/main/res/layout/user_design.xml
+++ b/app/src/main/res/layout/user_design.xml
@@ -10,7 +10,7 @@
         android:id="@+id/divider"
         android:layout_width="match_parent"
         android:layout_height="120dp"
-        android:background="?android:attr/listDivider"
+        android:background="@color/white"
         android:layout_marginTop="2dp"
         android:layout_marginBottom="2dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -22,12 +22,14 @@
         android:id="@+id/itemImage"
         android:layout_width="97dp"
         android:layout_height="97dp"
-        android:layout_marginBottom="5dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginBottom="15dp"
         android:scaleType="fitXY"
         android:src="@mipmap/ic_launcher_round"
         app:layout_constraintBottom_toBottomOf="@+id/divider"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/itemInfo" />
+        app:layout_constraintTop_toBottomOf="@id/itemInfo"
+        app:layout_constraintVertical_bias="1.0"/>
 
 
     <TextView
@@ -36,7 +38,7 @@
         android:layout_height="wrap_content"
         android:text="USER"
         android:textSize="23sp"
-        android:textStyle="bold|italic"
+        android:textStyle="bold"
         android:textColor="@color/black"
         android:gravity="center_horizontal"
         app:layout_constraintTop_toTopOf="parent"
@@ -51,7 +53,7 @@
         android:gravity="center_vertical"
         android:text="  ---"
         android:textSize="20sp"
-
+        android:layout_marginStart="5dp"
         android:layout_marginTop="23dp"
         android:layout_marginBottom="27dp"
         android:layout_marginEnd="120dp"
