--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -11,7 +11,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:background="@color/design_default_color_primary"
+        android:background="@color/primaryColor"
 
         />
     <androidx.appcompat.widget.AppCompatImageView
@@ -29,85 +29,87 @@
     <TextView
         android:id="@+id/itemNameTitle"
         android:layout_width="0dp"
-        app:layout_constraintWidth_percent="0.20"
+        app:layout_constraintWidth_percent="0.25"
         android:layout_height="50dp"
         android:layout_marginTop="5dp"
         app:layout_constraintTop_toBottomOf="@id/itemImageView"
         app:layout_constraintStart_toStartOf="parent"
         android:text="Name:"
-        android:textSize="28sp"
-        android:textStyle="bold|italic"
+        android:textSize="35sp"
+        android:textStyle="bold"
         android:textAppearance="@color/design_default_color_primary"
         android:gravity="center_vertical"
         />
     <TextView
         android:id="@+id/itemName"
         android:layout_width="0dp"
-        app:layout_constraintWidth_percent="0.80"
+        app:layout_constraintWidth_percent="0.75"
         android:layout_height="50dp"
         android:layout_marginTop="5dp"
+        android:layout_marginStart="3dp"
         app:layout_constraintTop_toBottomOf="@+id/itemImageView"
         app:layout_constraintStart_toEndOf="@+id/itemNameTitle"
         app:layout_constraintEnd_toEndOf="parent"
         android:textSize="20sp"
-        android:textStyle="italic"
-        android:textColor="@color/teal_200"
+        android:textStyle="normal"
+        android:textColor="@color/secondaryColor"
         android:gravity="center_vertical"
         />
     <TextView
         android:id="@+id/itemIDTitle"
         android:layout_width="0dp"
-        app:layout_constraintWidth_percent="0.20"
+        app:layout_constraintWidth_percent="0.15"
         android:layout_height="50dp"
         android:layout_marginTop="5dp"
         app:layout_constraintTop_toBottomOf="@id/itemNameTitle"
         app:layout_constraintStart_toStartOf="parent"
         android:text="ID:"
         android:textSize="35sp"
-        android:textStyle="bold|italic"
+        android:textStyle="bold"
         android:textAppearance="@color/design_default_color_primary"
         android:gravity="center_vertical"
         />
     <TextView
         android:id="@+id/itemID"
         android:layout_width="0dp"
-        app:layout_constraintWidth_percent="0.80"
+        app:layout_constraintWidth_percent="0.85"
         android:layout_height="50dp"
         android:layout_marginTop="5dp"
         app:layout_constraintTop_toBottomOf="@+id/itemName"
         app:layout_constraintStart_toEndOf="@+id/itemIDTitle"
         app:layout_constraintEnd_toEndOf="parent"
         android:textSize="20sp"
-        android:textStyle="italic"
-        android:textColor="@color/teal_200"
+        android:textStyle="normal"
+        android:textColor="@color/secondaryColor"
         android:gravity="center_vertical"
         />
     <TextView
         android:id="@+id/itemScoreTitle"
         android:layout_width="0dp"
-        app:layout_constraintWidth_percent="0.20"
+        app:layout_constraintWidth_percent="0.25"
         android:layout_height="50dp"
         android:layout_marginTop="5dp"
         app:layout_constraintTop_toBottomOf="@id/itemIDTitle"
         app:layout_constraintStart_toStartOf="parent"
         android:text="Score:"
-        android:textSize="28sp"
-        android:textStyle="bold|italic"
+        android:textSize="35sp"
+        android:textStyle="bold"
         android:textAppearance="@color/design_default_color_primary"
         android:gravity="center_vertical"
         />
     <TextView
         android:id="@+id/itemScore"
         android:layout_width="0dp"
-        app:layout_constraintWidth_percent="0.80"
+        app:layout_constraintWidth_percent="0.75"
         android:layout_height="50dp"
         android:layout_marginTop="5dp"
+        android:layout_marginStart="7dp"
         app:layout_constraintTop_toBottomOf="@+id/itemID"
         app:layout_constraintStart_toEndOf="@+id/itemScoreTitle"
         app:layout_constraintEnd_toEndOf="parent"
         android:textSize="20sp"
-        android:textStyle="italic"
-        android:textColor="@color/teal_200"
+        android:textStyle="normal"
+        android:textColor="@color/secondaryColor"
         android:gravity="center_vertical"
         />
     <TextView
@@ -120,7 +122,7 @@
         app:layout_constraintStart_toStartOf="parent"
         android:text="URL:"
         android:textSize="35sp"
-        android:textStyle="bold|italic"
+        android:textStyle="bold"
         android:textAppearance="@color/design_default_color_primary"
         android:gravity="center_vertical"
         />
@@ -134,10 +136,10 @@
         app:layout_constraintStart_toEndOf="@+id/itemHtmlUrlTitle"
         app:layout_constraintEnd_toEndOf="parent"
         android:textSize="20sp"
-        android:textStyle="italic"
-        android:textColor="@color/teal_200"
+        android:textStyle="normal"
         android:gravity="center_vertical"
         android:autoLink="web"
+        android:textColorLink="@color/secondaryColor"
         />
     <TextView
         android:id="@+id/repoOwner"
@@ -150,6 +152,7 @@
         android:gravity="center_vertical"
         android:textSize="25sp"
         android:textColor="@color/black"
+        android:textColorLink="@color/secondaryColor"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
