--- a/app/src/main/res/layout/repo_design.xml
+++ b/app/src/main/res/layout/repo_design.xml
@@ -4,16 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="120dp"
-    android:orientation="vertical"
-    android:onClick="onItemClick">
+    android:orientation="vertical">
 
     <View
         android:id="@+id/divider"
         android:layout_width="match_parent"
         android:layout_height="120dp"
-        android:background="?android:attr/listDivider"
         android:layout_marginTop="2dp"
         android:layout_marginBottom="2dp"
+        android:background="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -23,13 +22,14 @@
         android:id="@+id/itemImage"
         android:layout_width="97dp"
         android:layout_height="97dp"
-        android:layout_marginBottom="5dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginBottom="15dp"
         android:scaleType="fitXY"
         android:src="@mipmap/ic_launcher_round"
         app:layout_constraintBottom_toBottomOf="@+id/divider"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/itemInfo" />
-
+        app:layout_constraintTop_toBottomOf="@id/itemInfo"
+        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
         android:id="@+id/itemInfo"
@@ -37,13 +37,13 @@
         android:layout_height="wrap_content"
         android:text="REPOSITORY"
         android:textSize="23sp"
-        android:textStyle="bold|italic"
+        android:textStyle="bold"
         android:textColor="@color/black"
         android:gravity="center_horizontal"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="16dp" />
+        android:layout_marginEnd="120dp"
+        android:layout_marginStart="120dp"/>
 
     <TextView
         android:id="@+id/itemInfoCard"
@@ -52,7 +52,7 @@
         android:gravity="center_vertical"
         android:text="  ---"
         android:textSize="20sp"
-
+        android:layout_marginStart="5dp"
         android:layout_marginTop="23dp"
         android:layout_marginBottom="27dp"
         android:layout_marginEnd="120dp"
