--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,8 +18,8 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.textfield.TextInputLayout
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:id="@+id/edit_text_container"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:boxCornerRadiusBottomEnd="10dp"
@@ -36,9 +36,9 @@
             android:id="@+id/edit_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:imeOptions="actionSearch"
             android:hint="@string/type_here"
-            android:inputType="text"/>
+            android:imeOptions="actionSearch"
+            android:inputType="text" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -46,15 +46,14 @@
         android:id="@+id/search_button"
         android:layout_width="0dp"
         android:layout_height="60dp"
+        android:background="?attr/selectableItemBackgroundBorderless"
         android:backgroundTint="@color/primaryColor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_weight="0.10"
         app:layout_constraintStart_toEndOf="@id/edit_text_container"
         app:layout_constraintTop_toBottomOf="@id/toolbar"
         app:layout_constraintWidth_percent="0.15"
-        app:srcCompat="@drawable/search_icon"
-        android:background="?attr/selectableItemBackgroundBorderless"
-        />
+        app:srcCompat="@drawable/search_icon" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
@@ -64,6 +63,18 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edit_text_container" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/recycler_view"
+        app:layout_constraintEnd_toStartOf="@+id/recycler_view"
+        app:layout_constraintStart_toEndOf="@+id/recycler_view"
+        app:layout_constraintTop_toBottomOf="@+id/recycler_view"
+        android:visibility="visible"
+        android:indeterminateTint="@color/primaryDarkColor"
+        />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
