--- a/app/src/main/res/layout/user_design.xml
+++ b/app/src/main/res/layout/user_design.xml
@@ -3,16 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="120dp"
+    android:layout_height="90dp"
     android:orientation="vertical">
 
     <View
         android:id="@+id/divider"
         android:layout_width="match_parent"
-        android:layout_height="120dp"
+        android:layout_height="match_parent"
         android:background="@color/white"
-        android:layout_marginTop="2dp"
-        android:layout_marginBottom="2dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginBottom="0dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -20,10 +20,10 @@
 
     <ImageView
         android:id="@+id/itemImage"
-        android:layout_width="97dp"
-        android:layout_height="97dp"
+        android:layout_width="75dp"
+        android:layout_height="75dp"
         android:layout_marginEnd="4dp"
-        android:layout_marginBottom="15dp"
+        android:layout_marginBottom="7dp"
         android:scaleType="fitXY"
         android:src="@mipmap/ic_launcher_round"
         app:layout_constraintBottom_toBottomOf="@+id/divider"
@@ -37,7 +37,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="USER"
-        android:textSize="23sp"
+        android:textSize="18sp"
         android:textStyle="bold"
         android:textColor="@color/black"
         android:gravity="center_horizontal"
@@ -52,10 +52,10 @@
         android:layout_height="match_parent"
         android:gravity="center_vertical"
         android:text="  ---"
-        android:textSize="20sp"
+        android:textSize="13sp"
         android:layout_marginStart="5dp"
-        android:layout_marginTop="23dp"
-        android:layout_marginBottom="27dp"
+        android:layout_marginTop="18dp"
+        android:layout_marginBottom="18dp"
         android:layout_marginEnd="120dp"
         app:layout_constraintTop_toTopOf="@+id/divider"
         app:layout_constraintStart_toEndOf="@+id/itemInfo"
