--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:singleLine="true"
     >
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
@@ -14,28 +15,33 @@
         android:background="@color/primaryColor"
 
         />
-    <androidx.appcompat.widget.AppCompatImageView
+    <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/itemImageView"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintHeight_percent="0.45"
+        android:layout_height="wrap_content"
+        android:adjustViewBounds="true"
+        android:layout_marginHorizontal="80dp"
+        android:paddingHorizontal="10dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
         android:scaleType="fitXY"
+        android:backgroundTint="@color/black"
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:backgroundTint="@color/black"
         android:src="@mipmap/ic_launcher_round"
+        app:shapeAppearanceOverlay="@style/Theme.GithubSearcher"
          />
     <TextView
         android:id="@+id/itemNameTitle"
         android:layout_width="0dp"
-        app:layout_constraintWidth_percent="0.25"
-        android:layout_height="50dp"
+        android:text="@string/name"
+        app:layout_constraintWidth_percent="0.2"
+        android:layout_height="35dp"
         android:layout_marginTop="5dp"
         app:layout_constraintTop_toBottomOf="@id/itemImageView"
         app:layout_constraintStart_toStartOf="parent"
-        android:text="Name:"
-        android:textSize="35sp"
+        android:textSize="25sp"
         android:textStyle="bold"
         android:textAppearance="@color/design_default_color_primary"
         android:gravity="center_vertical"
@@ -43,14 +49,14 @@
     <TextView
         android:id="@+id/itemName"
         android:layout_width="0dp"
-        app:layout_constraintWidth_percent="0.75"
-        android:layout_height="50dp"
+        app:layout_constraintWidth_percent="0.8"
+        android:layout_height="35dp"
         android:layout_marginTop="5dp"
-        android:layout_marginStart="3dp"
         app:layout_constraintTop_toBottomOf="@+id/itemImageView"
         app:layout_constraintStart_toEndOf="@+id/itemNameTitle"
         app:layout_constraintEnd_toEndOf="parent"
-        android:textSize="20sp"
+        android:maxLines="1"
+        android:textSize="23sp"
         android:textStyle="normal"
         android:textColor="@color/secondaryColor"
         android:gravity="center_vertical"
@@ -59,12 +65,12 @@
         android:id="@+id/itemIDTitle"
         android:layout_width="0dp"
         app:layout_constraintWidth_percent="0.15"
-        android:layout_height="50dp"
+        android:layout_height="35dp"
         android:layout_marginTop="5dp"
         app:layout_constraintTop_toBottomOf="@id/itemNameTitle"
         app:layout_constraintStart_toStartOf="parent"
-        android:text="ID:"
-        android:textSize="35sp"
+        android:text="@string/id"
+        android:textSize="25sp"
         android:textStyle="bold"
         android:textAppearance="@color/design_default_color_primary"
         android:gravity="center_vertical"
@@ -73,7 +79,7 @@
         android:id="@+id/itemID"
         android:layout_width="0dp"
         app:layout_constraintWidth_percent="0.85"
-        android:layout_height="50dp"
+        android:layout_height="35dp"
         android:layout_marginTop="5dp"
         app:layout_constraintTop_toBottomOf="@+id/itemName"
         app:layout_constraintStart_toEndOf="@+id/itemIDTitle"
@@ -87,12 +93,12 @@
         android:id="@+id/itemScoreTitle"
         android:layout_width="0dp"
         app:layout_constraintWidth_percent="0.25"
-        android:layout_height="50dp"
+        android:layout_height="35dp"
         android:layout_marginTop="5dp"
         app:layout_constraintTop_toBottomOf="@id/itemIDTitle"
         app:layout_constraintStart_toStartOf="parent"
-        android:text="Score:"
-        android:textSize="35sp"
+        android:text="@string/score"
+        android:textSize="25sp"
         android:textStyle="bold"
         android:textAppearance="@color/design_default_color_primary"
         android:gravity="center_vertical"
@@ -101,7 +107,7 @@
         android:id="@+id/itemScore"
         android:layout_width="0dp"
         app:layout_constraintWidth_percent="0.75"
-        android:layout_height="50dp"
+        android:layout_height="35dp"
         android:layout_marginTop="5dp"
         android:layout_marginStart="7dp"
         app:layout_constraintTop_toBottomOf="@+id/itemID"
@@ -116,12 +122,12 @@
         android:id="@+id/itemHtmlUrlTitle"
         android:layout_width="0dp"
         app:layout_constraintWidth_percent="0.20"
-        android:layout_height="50dp"
+        android:layout_height="35dp"
         android:layout_marginTop="5dp"
         app:layout_constraintTop_toBottomOf="@id/itemScoreTitle"
         app:layout_constraintStart_toStartOf="parent"
-        android:text="URL:"
-        android:textSize="35sp"
+        android:text="@string/url"
+        android:textSize="25sp"
         android:textStyle="bold"
         android:textAppearance="@color/design_default_color_primary"
         android:gravity="center_vertical"
@@ -130,12 +136,14 @@
         android:id="@+id/itemHtmlUrl"
         android:layout_width="0dp"
         app:layout_constraintWidth_percent="0.80"
-        android:layout_height="50dp"
+        android:layout_height="35dp"
         android:layout_marginTop="5dp"
         app:layout_constraintTop_toBottomOf="@+id/itemScore"
         app:layout_constraintStart_toEndOf="@+id/itemHtmlUrlTitle"
         app:layout_constraintEnd_toEndOf="parent"
-        android:textSize="20sp"
+        android:textSize="23sp"
+        android:ellipsize="end"
+        android:maxLines="1"
         android:textStyle="normal"
         android:gravity="center_vertical"
         android:autoLink="web"
@@ -144,13 +152,13 @@
     <TextView
         android:id="@+id/repoOwner"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="35dp"
         android:layout_marginTop="5dp"
         app:layout_constraintTop_toBottomOf="@id/itemHtmlUrl"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:gravity="center_vertical"
-        android:textSize="25sp"
+        android:textSize="20sp"
         android:textColor="@color/black"
         android:textColorLink="@color/secondaryColor"
         />
